# extensible-higher-kinded-datatypes

./: README.md  flake.nix
.github/workflows/: ci.yaml
extensible-higher-kinded-datatypes/: CHANGELOG.md  README.md  extensible-higher-kinded-datatypes.cabal
extensible-higher-kinded-datatypes/src/Data/HKD/: Extensible.hs
extensible-higher-kinded-datatypes/src/Data/HKD/Extensible/: Label.hs  Optionality.hs  Validatable.hs
