cabal-version: 3.0
name: extensible-higher-kinded-datatypes
version: 0.1.0.0
synopsis: Extensible higher kinded datatypes
description: Higher kinded datatypes with extensible aspects & phases
license: BSD-3-Clause
license-file: LICENSE
author: Manuel Bärenz
maintainer: mbaerenz@heilmannsoftware.de
category: Data
build-type: Simple
extra-doc-files: CHANGELOG.md
tested-with:
  ghc ==8.6
  ghc ==8.8
  ghc ==8.10
  ghc ==9.0
  ghc ==9.2
  ghc ==9.4
  ghc ==9.6
  ghc ==9.8
  ghc ==9.10
  ghc ==9.12

common opts
  ghc-options: -Wall
  build-depends:
    base >=4.12.0.0 && <4.22,
    validation ^>=1.1,
  default-extensions:
    CPP
    DataKinds
    DerivingStrategies
    GADTs
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    TypeFamilies
    TypeOperators

  if impl(ghc >=8.10)
    default-extensions:
      StandaloneKindSignatures

library
  import: opts
  exposed-modules:
    Data.HKD.Extensible
    Data.HKD.Extensible.Label
    Data.HKD.Extensible.Optionality
    Data.HKD.Extensible.Validatable

  hs-source-dirs: src
  default-language: Haskell2010

library readme
  import: opts
  build-depends:
    barbies ^>= 2.1,
    extensible-higher-kinded-datatypes
  hs-source-dirs: .
  other-modules: README
  default-language: Haskell2010
  ghc-options: -pgmL markdown-unlit
